Fix exception scope verification failures in CommonSlowPaths.cpp/h. https://bugs.webkit.org/show_bug.cgi?id=164975

Reviewed by Darin Adler.

* runtime/CommonSlowPaths.cpp:
(JSC::SLOW_PATH_DECL):
* runtime/CommonSlowPaths.h:
(JSC::CommonSlowPaths::opIn):


Canonical link: https://commits.webkit.org/182645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208936 268f45cc-cd09-0410-ab3c-d52691b4dbfc